fix(Favorites): add correct spacing and text size for channels with longer titles

--- a/pages/favorites/Favorites.module.css
+++ b/pages/favorites/Favorites.module.css
@@ -83,6 +83,12 @@
   margin: 0;
 
   text-align: center;
+  max-width: 100px;
+}
+.channel > a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .badge {
